# prototypes

./: .gitignore
SIP/sofia/: register.c
cpp/: escaping_dots.cpp
cpp/delegate/: delegate.cpp
cpp/policies/: policies.cpp
cpp/service_delegation/: const_only_no_wrapper.cpp
cpp/static_methods/: static_methods.cpp
cpp/typeinfo_readable/: typeinfo_readable.cpp
fftw/: 1Dbasic.c  Makefile
glib/: Makefile  closures.c  dir_tracking.c
gst/: Makefile  basic.c  decklink.c  dynplay.c  imagesink_dynplug.c  listcolorspace.c  rtp-codec.c  sin.c  urirec.c  videoshm-audioplay.c
gstcontrolfromosc-0.10.0/: Makefile.in  configure  configure.ac
gstcontrolfromosc-0.10.0/src/: Makefile.am  Makefile.in  aux_functions.c  aux_functions.h  gstcontrolfromosc.c  gstcontrolfromosc.h  osc_handlers.c  osc_handlers.h
gstoscctrl-0.10.0/: .gitignore  AUTHORS  COPYING  INSTALL  Makefile.in  NEWS  README  configure  configure.ac
gstoscctrl-0.10.0/src/: Makefile.am  Makefile.in  aux_functions.c  aux_functions.h  gstcontrolfromosc.c  gstcontrolfromosc.h  gstoscctrl.c  gstoscctrl.h  osc_handlers.c  osc_handlers.h
kinect-streaming/: README
node.js/dynamic_library_gyp/: addon.cpp  binding.gyp  test.js
node.js/helloworld_cpp_make/: Makefile  example.js  hello.cpp  helloworld.cpp  test-helloworld.js  test.js
node.js/switcher_addon_gyp/: README  binding.gyp  switcher_addon.cpp  test.js
rtsp-raw-video/: RTSP-rawvideo.txt
sc/: VBAP.scd  center_bass.scd
shared-video-proto/: Makefile  README.txt  shared-video-reader-nondynamic.c  shared-video-reader-withvalve.c  shared-video-reader.c  shared-video-writer-reinit-at-shm-connect.c  shared-video-writer-reinit-at-shm-deconnected.c  shared-video-writer-with-localpreview.c  shared-video-writer-withlocalpreview-without-wait-on-connection.c  shared-video-writer-withoutflushing.c  shared-video-writer-working-but-with-flushing.c  shared-video-writer.c
vnc/: Makefile  gtkvncviewer_shmdata.c
